log
Thu 09 May 2024 02:16:29 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
9216ffa
Thu 09 May 2024 02:31:24 AM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  6|6
total_score: 15/70
d8e1088
Thu 09 May 2024 02:36:06 AM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  7|6
total_score: 15/70
2623adb
Thu 09 May 2024 02:36:40 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cfce5d7
Thu 09 May 2024 02:36:55 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
b17f6c3
Thu 09 May 2024 02:40:57 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
ab0da2d
Thu 09 May 2024 03:05:18 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:97:23: error: unused variable ‘minimumNode’ [-Werror=unused-variable]
   97 |             TreeNode *minimumNode = minimum(node->right);
      |                       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
74a33e6
Thu 09 May 2024 03:05:32 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  16|4
total_score: 30/70
7348c59
Thu 09 May 2024 04:37:32 AM UTC: 
 treemap.c | 16 +---------------
 1 file changed, 1 insertion(+), 15 deletions(-)
In file included from test.c:4:
treemap.c:89:1: error: expected identifier or ‘(’ before ‘}’ token
   89 | }
      | ^
Compilation failed
e50e07e
